--- a/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/View/SZGoodsInputCell.xib
+++ b/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/View/SZGoodsInputCell.xib
@@ -5,22 +5,132 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11762"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" restorationIdentifier="cell" id="bho-WB-4sb" customClass="SZGoodsInputCell">
-            <rect key="frame" x="0.0" y="0.0" width="431" height="222"/>
+            <rect key="frame" x="0.0" y="0.0" width="431" height="224"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x9d-L2-exl">
-                    <rect key="frame" x="0.0" y="0.0" width="431" height="222"/>
-                    <color key="backgroundColor" red="0.96078431369999995" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="0.0" y="0.0" width="431" height="224"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B3d-AD-KRD">
+                            <rect key="frame" x="0.0" y="0.0" width="431" height="44"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="成本" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2h-7U-8ew">
+                                    <rect key="frame" x="10" y="14" width="29" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jUS-1I-1dO">
+                                    <rect key="frame" x="395" y="8" width="26" height="28"/>
+                                    <state key="normal" image="+"/>
+                                </button>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 2" translatesAutoresizingMaskIntoConstraints="NO" id="fh5-cS-m0n">
+                                    <rect key="frame" x="343" y="8" width="52" height="28"/>
+                                </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E07-VS-xDb">
+                                    <rect key="frame" x="317" y="8" width="26" height="28"/>
+                                    <state key="normal" image="-"/>
+                                </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="160" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m26-UU-Ab7">
+                                    <rect key="frame" x="343" y="12" width="52" height="20"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <color key="textColor" red="0.40392156862745099" green="0.40392156862745099" blue="0.40392156862745099" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1T-fe-mhB">
+                                    <rect key="frame" x="294" y="12" width="18" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" red="0.40392156862745099" green="0.40392156862745099" blue="0.40392156862745099" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="W2h-7U-8ew" firstAttribute="leading" secondItem="B3d-AD-KRD" secondAttribute="leading" constant="10" id="7TT-he-9cq"/>
+                                <constraint firstItem="W2h-7U-8ew" firstAttribute="centerY" secondItem="B3d-AD-KRD" secondAttribute="centerY" id="8js-fz-dHC"/>
+                                <constraint firstItem="jUS-1I-1dO" firstAttribute="leading" secondItem="m26-UU-Ab7" secondAttribute="trailing" id="O0Z-eY-HMd"/>
+                                <constraint firstItem="jUS-1I-1dO" firstAttribute="leading" secondItem="fh5-cS-m0n" secondAttribute="trailing" id="RFN-U9-pvh"/>
+                                <constraint firstItem="E07-VS-xDb" firstAttribute="centerY" secondItem="B3d-AD-KRD" secondAttribute="centerY" id="UTI-06-Ses"/>
+                                <constraint firstItem="jUS-1I-1dO" firstAttribute="centerY" secondItem="B3d-AD-KRD" secondAttribute="centerY" id="aS4-be-fhw"/>
+                                <constraint firstItem="fh5-cS-m0n" firstAttribute="leading" secondItem="E07-VS-xDb" secondAttribute="trailing" id="jd0-d5-vG3"/>
+                                <constraint firstItem="E07-VS-xDb" firstAttribute="leading" secondItem="i1T-fe-mhB" secondAttribute="trailing" constant="5" id="lBi-j8-hPp"/>
+                                <constraint firstItem="m26-UU-Ab7" firstAttribute="centerY" secondItem="B3d-AD-KRD" secondAttribute="centerY" id="n9c-xj-4mj"/>
+                                <constraint firstItem="m26-UU-Ab7" firstAttribute="leading" secondItem="E07-VS-xDb" secondAttribute="trailing" id="pC8-xK-7zw"/>
+                                <constraint firstItem="fh5-cS-m0n" firstAttribute="centerY" secondItem="B3d-AD-KRD" secondAttribute="centerY" id="rY9-Ux-Xdf"/>
+                                <constraint firstAttribute="trailing" secondItem="jUS-1I-1dO" secondAttribute="trailing" constant="10" id="tl5-Ce-6f8"/>
+                                <constraint firstAttribute="height" constant="44" id="vLO-tA-LCC"/>
+                                <constraint firstItem="i1T-fe-mhB" firstAttribute="centerY" secondItem="B3d-AD-KRD" secondAttribute="centerY" id="yF7-Gy-Y9i"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YEK-Rg-KNE">
+                            <rect key="frame" x="0.0" y="180" width="431" height="44"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥2000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLA-PA-Of3">
+                                    <rect key="frame" x="359" y="11" width="62" height="22"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                    <color key="textColor" red="0.22352941176470587" green="0.59215686274509804" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总金额：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJO-DJ-Tjl">
+                                    <rect key="frame" x="291" y="14" width="58" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C68-1Z-eMN">
+                                    <rect key="frame" x="259" y="11" width="22" height="22"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                    <color key="textColor" red="0.22352941176470587" green="0.59215686274509804" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总数：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cno-zv-bS7">
+                                    <rect key="frame" x="206" y="14" width="43" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="C68-1Z-eMN" firstAttribute="centerY" secondItem="YEK-Rg-KNE" secondAttribute="centerY" id="1Dv-qq-Ysl"/>
+                                <constraint firstItem="AJO-DJ-Tjl" firstAttribute="centerY" secondItem="YEK-Rg-KNE" secondAttribute="centerY" id="C7K-8W-5IV"/>
+                                <constraint firstAttribute="height" constant="44" id="Dhu-o3-Xvb"/>
+                                <constraint firstItem="AJO-DJ-Tjl" firstAttribute="leading" secondItem="C68-1Z-eMN" secondAttribute="trailing" constant="10" id="GGL-RR-1sd"/>
+                                <constraint firstItem="cLA-PA-Of3" firstAttribute="centerY" secondItem="YEK-Rg-KNE" secondAttribute="centerY" id="UV8-1o-h59"/>
+                                <constraint firstAttribute="trailing" secondItem="cLA-PA-Of3" secondAttribute="trailing" constant="10" id="Wde-Lk-7rk"/>
+                                <constraint firstItem="cLA-PA-Of3" firstAttribute="leading" secondItem="AJO-DJ-Tjl" secondAttribute="trailing" constant="10" id="aWb-sx-X6J"/>
+                                <constraint firstItem="Cno-zv-bS7" firstAttribute="centerY" secondItem="YEK-Rg-KNE" secondAttribute="centerY" id="dNz-69-ErJ"/>
+                                <constraint firstItem="C68-1Z-eMN" firstAttribute="leading" secondItem="Cno-zv-bS7" secondAttribute="trailing" constant="10" id="tLf-y0-rZt"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BBg-Np-cDC">
+                            <rect key="frame" x="0.0" y="45" width="431" height="134"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="BBg-Np-cDC" firstAttribute="leading" secondItem="x9d-L2-exl" secondAttribute="leading" id="FwI-Oe-5KC"/>
+                        <constraint firstAttribute="trailing" secondItem="B3d-AD-KRD" secondAttribute="trailing" id="Jn2-Wa-v3A"/>
+                        <constraint firstAttribute="trailing" secondItem="YEK-Rg-KNE" secondAttribute="trailing" id="L6u-mf-ota"/>
+                        <constraint firstItem="BBg-Np-cDC" firstAttribute="top" secondItem="x9d-L2-exl" secondAttribute="top" constant="45" id="MZX-ur-bTS"/>
+                        <constraint firstItem="B3d-AD-KRD" firstAttribute="leading" secondItem="x9d-L2-exl" secondAttribute="leading" id="WAY-KH-3iY"/>
+                        <constraint firstItem="B3d-AD-KRD" firstAttribute="top" secondItem="x9d-L2-exl" secondAttribute="top" id="Ysf-cy-dGw"/>
+                        <constraint firstAttribute="bottom" secondItem="YEK-Rg-KNE" secondAttribute="bottom" id="gYK-sG-kCD"/>
+                        <constraint firstItem="YEK-Rg-KNE" firstAttribute="leading" secondItem="x9d-L2-exl" secondAttribute="leading" id="hcY-Pc-sn8"/>
+                        <constraint firstItem="YEK-Rg-KNE" firstAttribute="top" secondItem="BBg-Np-cDC" secondAttribute="bottom" constant="1" id="kCx-iV-76G"/>
+                        <constraint firstAttribute="trailing" secondItem="BBg-Np-cDC" secondAttribute="trailing" id="xHs-m4-RG2"/>
+                    </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="x9d-L2-exl" firstAttribute="leading" secondItem="bho-WB-4sb" secondAttribute="leading" id="CFi-bg-c8F"/>
                 <constraint firstAttribute="bottom" secondItem="x9d-L2-exl" secondAttribute="bottom" id="VjB-OD-vTM"/>
@@ -29,9 +139,14 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="moreContentView" destination="x9d-L2-exl" id="K6m-wt-inB"/>
+                <outlet property="middleContentView" destination="BBg-Np-cDC" id="681-1z-Ncc"/>
             </connections>
-            <point key="canvasLocation" x="-88.5" y="-163"/>
+            <point key="canvasLocation" x="-88.5" y="-163.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="+" width="26" height="28"/>
+        <image name="-" width="26" height="28"/>
+        <image name="Rectangle 2" width="52" height="28"/>
+    </resources>
 </document>
