--- a/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/View/SZGoodsInputHeaderView.xib
+++ b/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/View/SZGoodsInputHeaderView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="cell" id="SPl-mE-kKI" customClass="SZGoodsInputHeaderView">
+        <view contentMode="scaleToFill" restorationIdentifier="HeadViewcell" id="SPl-mE-kKI" customClass="SZGoodsInputHeaderView">
             <rect key="frame" x="0.0" y="0.0" width="431" height="140"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -92,7 +92,7 @@
                 <outlet property="goodsImage" destination="zdM-p4-WDH" id="aFo-8O-8kb"/>
                 <outlet property="goodsSumLabel" destination="sj3-he-iq7" id="RAk-as-c2F"/>
                 <outlet property="priceLabel" destination="R7q-19-vHT" id="MQt-iu-iLD"/>
-                <outlet property="selecedImage" destination="82t-eP-gON" id="VX5-Z0-1Nl"/>
+                <outlet property="selecedImage" destination="82t-eP-gON" id="lm4-hd-AK6"/>
                 <outlet property="titleLabel" destination="3SO-Aq-nlT" id="W0A-PA-JRe"/>
             </connections>
             <point key="canvasLocation" x="-88.5" y="-217"/>
