--- a/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/NewAddGoods(新增商品)/Color/Controller/SZColorController.xib
+++ b/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/NewAddGoods(新增商品)/Color/Controller/SZColorController.xib
@@ -16,11 +16,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="v3H-SK-t2r">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="531"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="skN-0O-j7y" customClass="SZBaseTableView">
-                    <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                    <rect key="frame" x="0.0" y="45" width="375" height="486"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="EU8-WR-coj"/>
@@ -53,9 +53,10 @@
                 <constraint firstItem="HLp-Op-M97" firstAttribute="leading" secondItem="v3H-SK-t2r" secondAttribute="leading" id="E9H-y0-p88"/>
                 <constraint firstAttribute="bottom" secondItem="skN-0O-j7y" secondAttribute="bottom" id="KEm-iP-mBu"/>
                 <constraint firstItem="HLp-Op-M97" firstAttribute="top" secondItem="v3H-SK-t2r" secondAttribute="top" id="bzO-gj-JU5"/>
-                <constraint firstItem="skN-0O-j7y" firstAttribute="top" secondItem="v3H-SK-t2r" secondAttribute="top" constant="44" id="klD-NV-CXf"/>
+                <constraint firstItem="skN-0O-j7y" firstAttribute="top" secondItem="v3H-SK-t2r" secondAttribute="top" constant="45" id="klD-NV-CXf"/>
             </constraints>
-            <point key="canvasLocation" x="-84" y="18"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-84.5" y="-18.5"/>
         </view>
     </objects>
 </document>
