--- a/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/Color/Red/View/SZInputRedCell.xib
+++ b/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/Color/Red/View/SZInputRedCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="inputRed" selectionStyle="default" indentationWidth="10" id="aIX-eK-zdm" customClass="SZInputRedCell">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="inputRed" selectionStyle="default" indentationWidth="10" reuseIdentifier="inputRed" id="aIX-eK-zdm" customClass="SZInputRedCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aIX-eK-zdm" id="Pmt-C3-deK">
@@ -28,15 +28,14 @@
                         <rect key="frame" x="284" y="8" width="26" height="28"/>
                         <state key="normal" image="+"/>
                         <connections>
-                            <action selector="addBtnClick" destination="aIX-eK-zdm" eventType="touchUpInside" id="hPp-Rk-j8B"/>
+                            <action selector="addBtnClick" destination="aIX-eK-zdm" eventType="touchUpInside" id="LMB-o4-Lrq"/>
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tlj-Qs-QjS">
                         <rect key="frame" x="206" y="8" width="26" height="28"/>
                         <state key="normal" image="-"/>
                         <connections>
-                            <action selector="minusBtnClick" destination="aIX-eK-zdm" eventType="touchUpInside" id="yyf-dx-JRw"/>
-                            <action selector="plusBtnClick" destination="aIX-eK-zdm" eventType="touchUpInside" id="tK3-c4-2np"/>
+                            <action selector="minusBtnClick" destination="aIX-eK-zdm" eventType="touchUpInside" id="ngZ-oG-WQk"/>
                         </connections>
                     </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 2" translatesAutoresizingMaskIntoConstraints="NO" id="DFs-3T-7bv">
@@ -65,8 +64,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="SizeLabel" destination="9Ko-Kn-Orj" id="dAD-5b-int"/>
-                <outlet property="quantityLabel" destination="G2q-NZ-Sqb" id="Izq-Kw-4dr"/>
-                <outlet property="sumLabel" destination="G2q-NZ-Sqb" id="we4-3f-pWR"/>
+                <outlet property="quantityLabel" destination="G2q-NZ-Sqb" id="Bbe-o0-jdj"/>
             </connections>
         </tableViewCell>
     </objects>
