--- a/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/Color/White/View/SZInputWhiteCell.xib
+++ b/SZStorage/SZStorage/Classes/GoodsInput(商品入库)/GoodsInput(商品入库)/Color/White/View/SZInputWhiteCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="inputWhite" selectionStyle="default" indentationWidth="10" id="7q7-ks-Haz" customClass="SZInputWhiteCell">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="inputWhite" selectionStyle="default" indentationWidth="10" reuseIdentifier="inputWhite" id="7q7-ks-Haz" customClass="SZInputWhiteCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7q7-ks-Haz" id="9xa-5t-Bpa">
